8310187: Improve Generational ZGC jtreg testing

Reviewed-by: eosterlund
Backport-of: a0595761ef35c4eec8cb84326a869b9473cd5bba